--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.0",
     "@vapi-ai/web": "^2.3.5",
     "axios": "^1.9.0",
@@ -29,10 +31,12 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "openai": "^5.1.1",
+    "razorpay": "^2.9.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
   },
